tutorials/SIGGRAPH2015_CPBP_code/Control/Apps/UnityODE/UnityOde.h


typedef dReal * OdeVector;

typedef const dReal * ConstOdeQuaternion;

void EXPORT_API odeJointGetHingeAnchor2(int jointId, float &x, float &y, float &z);

void EXPORT_API odeJointGetHingeAxis(int jointId, float &x, float &y, float &z);

float EXPORT_API odeJointGetHingeAngle(int jointId);

float EXPORT_API odeJointGetHingeAngleRate(int jointId);

float EXPORT_API odeJointGetHingeAngleFromBodyRotations(int jointId, ConstOdeQuaternion q1, ConstOdeQuaternion q2);


// Joint: AMotor parameters

void  EXPORT_API odeJointSetAMotorMode(int jointId, int mode);

int   EXPORT_API odeJointGetAMotorMode(int jointId);

void  EXPORT_API odeJointSetAMotorNumAxes(int jointId, int num);

int   EXPORT_API odeJointGetAMotorNumAxes(int jointId);

void  EXPORT_API odeJointSetAMotorAxis(int jointId, int anum, int rel, float x, float y, float z);

void  EXPORT_API odeJointGetAMotorAxis(int jointId, int anum, float &x, float &y, float &z);

int   EXPORT_API odeJointGetAMotorAxisRel(int jointId, int anum);

void  EXPORT_API odeJointSetAMotorAngle(int jointId, int anum, float angle);

float EXPORT_API odeJointGetAMotorAngle(int jointId, int anum);

float EXPORT_API odeJointGetAMotorAngleRate(int jointId, int anum);

//maps body rotations to angular motor angles
void EXPORT_API odeJointGetAMotorAnglesFromBodyRotations(int jointId, ConstOdeQuaternion q1, ConstOdeQuaternion q2, OdeVector result);

// Joint: Parameter functions

void  EXPORT_API odeJointSetBallParam(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetHingeParam(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetSliderParam(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetHinge2Param(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetUniversalParam(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetAMotorParam(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetLMotorParam(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetPRParam(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetPUParam(int jointId, int parameter, float value);

void  EXPORT_API odeJointSetPistonParam(int jointId, int parameter, float value);

float EXPORT_API odeJointGetBallParam(int jointId, int parameter);

float EXPORT_API odeJointGetHingeParam(int jointId, int parameter);

float EXPORT_API odeJointGetSliderParam(int jointId, int parameter);

float EXPORT_API odeJointGetHinge2Param(int jointId, int parameter);

float EXPORT_API odeJointGetUniversalParam(int jointId, int parameter);

float EXPORT_API odeJointGetAMotorParam(int jointId, int parameter);

float EXPORT_API odeJointGetLMotorParam(int jointId, int parameter);

float EXPORT_API odeJointGetPRParam(int jointId, int parameter);

float EXPORT_API odeJointGetPUParam(int jointId, int parameter);

float EXPORT_API odeJointGetPistonParam(int jointId, int parameter);



// Joint: Setting Joint Torques/Forces Directly

EXPORT_API void odeJointAddHingeTorque(int jointId, float torque);

EXPORT_API void odeJointAddUniversalTorques(int jointId, float torque1, float torque2);

EXPORT_API void odeJointAddSliderForce(int jointId, float force);

EXPORT_API void odeJointAddHinge2Torques(int jointId, float torque1, float torque2);

EXPORT_API void odeJointAddAMotorTorques(int jointId, float torque1, float torque2, float torque3);


//Some shortcuts to avoid separate calls for, e.g., setting/getting motor angles and fmax
//For hinges, will use
EXPORT_API void odeJointSetFmax(int jointId, float fmax1, float fmax2, float fmax3);


EXPORT_API void odeJointGetMotorAnglesDegrees(int jointId, OdeVector result);

EXPORT_API void odeJointSetAMotorVelocitiesDegreesPerSecond(int jointId, float vel1, float vel2, float vel3);

//Checks if the joint at a stop, and clamps the corresponding proposed motor velocity (inOut) so that if it's applied to the motor, it doesn't drive the joint against the limit.
EXPORT_API void clampControlVelocitiesAtStops(int nJoints, int *jointIds, float *velocities);

//sets several motor velocities at once, given as a float array with 1 float per hinge, 3 floats per amotor. Assumes degrees per seconds.
EXPORT_API void setMotorVelocities(int nJoints, int *jointIds, const float *velocities);


///////////////////////////////////////////////////////////////////////////////
// Support Functions
///////////////////////////////////////////////////////////////////////////////

// Support: Mass functions

EXPORT_API void odeMassSetSphere(int bodyId, float density, float radius);

EXPORT_API void odeMassSetSphereTotal(int bodyId, float total_mass, float radius);


EXPORT_API void odeMassSetCapsule(int bodyId, float density, float radius, float length);

EXPORT_API void odeMassSetCapsuleTotal(int bodyId, float total_mass, float radius, float length);


EXPORT_API void odeMassSetCylinder(int bodyId, float density, float radius, float length);

EXPORT_API void odeMassSetCylinderTotal(int bodyId, float total_mass, float radius, float length);


EXPORT_API void odeMassSetBox(int bodyId, float density, float lx, float ly, float lz);

EXPORT_API void odeMassSetBoxTotal(int bodyId, float total_mass, float lx, float ly, float lz);


// Returns the maximum contact speed of the body, -1 if the body is in no contact
EXPORT_API float odeGetMaxContactSpeed(int bodyId);

///////////////////////////////////////////////////////////////////////////////
// World
///////////////////////////////////////////////////////////////////////////////

void EXPORT_API odeWorldSetGravity(float x,float y, float z);

void EXPORT_API odeWorldSetCFM(float cfm);

void EXPORT_API odeWorldSetERP(float erp);

void EXPORT_API odeWorldSetContactMaxCorrectingVel(float vel);

void EXPORT_API odeWorldSetContactSurfaceLayer (float depth);


int EXPORT_API odeGetContactCount();

void EXPORT_API odeGetContactInfo(int index, int &body1Id, int &body2Id,  OdeVector out_pos, OdeVector out_normal, OdeVector out_vel);

//get contact between bodies. returns false if no contact
bool EXPORT_API odeGetContact(int body1Id, int body2Id,  OdeVector out_pos, OdeVector out_normal, OdeVector out_vel);