tutorials/SIGGRAPH2015_CPBP_code/Control/Apps/Unity/MinimalUnityExample/Assets/Scripts/UnityOde/UnityOdePINVOKE.cs


  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetHingeAnchor2")]
  public static extern void odeJointGetHingeAnchor2(int jarg1, out float jarg2, out float jarg3, out float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetHingeAxis")]
  public static extern void odeJointGetHingeAxis(int jarg1, out float jarg2, out float jarg3, out float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetHingeAngle")]
  public static extern float odeJointGetHingeAngle(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetHingeAngleRate")]
  public static extern float odeJointGetHingeAngleRate(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetHingeAngleFromBodyRotations")]
  public static extern float odeJointGetHingeAngleFromBodyRotations(int jarg1, /* imtype */ IntPtr jarg2, /* imtype */ IntPtr jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetAMotorMode")]
  public static extern void odeJointSetAMotorMode(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetAMotorMode")]
  public static extern int odeJointGetAMotorMode(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetAMotorNumAxes")]
  public static extern void odeJointSetAMotorNumAxes(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetAMotorNumAxes")]
  public static extern int odeJointGetAMotorNumAxes(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetAMotorAxis")]
  public static extern void odeJointSetAMotorAxis(int jarg1, int jarg2, int jarg3, float jarg4, float jarg5, float jarg6);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetAMotorAxis")]
  public static extern void odeJointGetAMotorAxis(int jarg1, int jarg2, out float jarg3, out float jarg4, out float jarg5);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetAMotorAxisRel")]
  public static extern int odeJointGetAMotorAxisRel(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetAMotorAngle")]
  public static extern void odeJointSetAMotorAngle(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetAMotorAngle")]
  public static extern float odeJointGetAMotorAngle(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetAMotorAngleRate")]
  public static extern float odeJointGetAMotorAngleRate(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetAMotorAnglesFromBodyRotations")]
  public static extern void odeJointGetAMotorAnglesFromBodyRotations(int jarg1, /* imtype */ IntPtr jarg2, /* imtype */ IntPtr jarg3, /* imtype */ IntPtr jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetBallParam")]
  public static extern void odeJointSetBallParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetHingeParam")]
  public static extern void odeJointSetHingeParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetSliderParam")]
  public static extern void odeJointSetSliderParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetHinge2Param")]
  public static extern void odeJointSetHinge2Param(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetUniversalParam")]
  public static extern void odeJointSetUniversalParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetAMotorParam")]
  public static extern void odeJointSetAMotorParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetLMotorParam")]
  public static extern void odeJointSetLMotorParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetPRParam")]
  public static extern void odeJointSetPRParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetPUParam")]
  public static extern void odeJointSetPUParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetPistonParam")]
  public static extern void odeJointSetPistonParam(int jarg1, int jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetBallParam")]
  public static extern float odeJointGetBallParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetHingeParam")]
  public static extern float odeJointGetHingeParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetSliderParam")]
  public static extern float odeJointGetSliderParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetHinge2Param")]
  public static extern float odeJointGetHinge2Param(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetUniversalParam")]
  public static extern float odeJointGetUniversalParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetAMotorParam")]
  public static extern float odeJointGetAMotorParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetLMotorParam")]
  public static extern float odeJointGetLMotorParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetPRParam")]
  public static extern float odeJointGetPRParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetPUParam")]
  public static extern float odeJointGetPUParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetPistonParam")]
  public static extern float odeJointGetPistonParam(int jarg1, int jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointAddHingeTorque")]
  public static extern void odeJointAddHingeTorque(int jarg1, float jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointAddUniversalTorques")]
  public static extern void odeJointAddUniversalTorques(int jarg1, float jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointAddSliderForce")]
  public static extern void odeJointAddSliderForce(int jarg1, float jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointAddHinge2Torques")]
  public static extern void odeJointAddHinge2Torques(int jarg1, float jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointAddAMotorTorques")]
  public static extern void odeJointAddAMotorTorques(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetFmax")]
  public static extern void odeJointSetFmax(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointGetMotorAnglesDegrees")]
  public static extern void odeJointGetMotorAnglesDegrees(int jarg1, /* imtype */ IntPtr jarg2);

  [DllImport("UnityOde", EntryPoint="CSharp_odeJointSetAMotorVelocitiesDegreesPerSecond")]
  public static extern void odeJointSetAMotorVelocitiesDegreesPerSecond(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_clampControlVelocitiesAtStops")]
  public static extern void clampControlVelocitiesAtStops(int jarg1, HandleRef jarg2, HandleRef jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_setMotorVelocities")]
  public static extern void setMotorVelocities(int jarg1, HandleRef jarg2, HandleRef jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeMassSetSphere")]
  public static extern void odeMassSetSphere(int jarg1, float jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeMassSetSphereTotal")]
  public static extern void odeMassSetSphereTotal(int jarg1, float jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeMassSetCapsule")]
  public static extern void odeMassSetCapsule(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeMassSetCapsuleTotal")]
  public static extern void odeMassSetCapsuleTotal(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeMassSetCylinder")]
  public static extern void odeMassSetCylinder(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeMassSetCylinderTotal")]
  public static extern void odeMassSetCylinderTotal(int jarg1, float jarg2, float jarg3, float jarg4);

  [DllImport("UnityOde", EntryPoint="CSharp_odeMassSetBox")]
  public static extern void odeMassSetBox(int jarg1, float jarg2, float jarg3, float jarg4, float jarg5);

  [DllImport("UnityOde", EntryPoint="CSharp_odeMassSetBoxTotal")]
  public static extern void odeMassSetBoxTotal(int jarg1, float jarg2, float jarg3, float jarg4, float jarg5);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGetMaxContactSpeed")]
  public static extern float odeGetMaxContactSpeed(int jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeWorldSetGravity")]
  public static extern void odeWorldSetGravity(float jarg1, float jarg2, float jarg3);

  [DllImport("UnityOde", EntryPoint="CSharp_odeWorldSetCFM")]
  public static extern void odeWorldSetCFM(float jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeWorldSetERP")]
  public static extern void odeWorldSetERP(float jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeWorldSetContactMaxCorrectingVel")]
  public static extern void odeWorldSetContactMaxCorrectingVel(float jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeWorldSetContactSurfaceLayer")]
  public static extern void odeWorldSetContactSurfaceLayer(float jarg1);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGetContactCount")]
  public static extern int odeGetContactCount();

  [DllImport("UnityOde", EntryPoint="CSharp_odeGetContactInfo")]
  public static extern void odeGetContactInfo(int jarg1, out int jarg2, out int jarg3, /* imtype */ IntPtr jarg4, /* imtype */ IntPtr jarg5, /* imtype */ IntPtr jarg6);

  [DllImport("UnityOde", EntryPoint="CSharp_odeRaycast__SWIG_0")]
  public static extern int odeRaycast__SWIG_0(float jarg1, float jarg2, float jarg3, float jarg4, float jarg5, float jarg6, float jarg7, /* imtype */ IntPtr jarg8, out float jarg9, uint jarg10, uint jarg11);

  [DllImport("UnityOde", EntryPoint="CSharp_odeRaycast__SWIG_1")]
  public static extern int odeRaycast__SWIG_1(float jarg1, float jarg2, float jarg3, float jarg4, float jarg5, float jarg6, float jarg7, /* imtype */ IntPtr jarg8, out float jarg9, uint jarg10);

  [DllImport("UnityOde", EntryPoint="CSharp_odeRaycast__SWIG_2")]
  public static extern int odeRaycast__SWIG_2(float jarg1, float jarg2, float jarg3, float jarg4, float jarg5, float jarg6, float jarg7, /* imtype */ IntPtr jarg8, out float jarg9);

  [DllImport("UnityOde", EntryPoint="CSharp_odeRaycastGeom__SWIG_0")]
  public static extern bool odeRaycastGeom__SWIG_0(float jarg1, float jarg2, float jarg3, float jarg4, float jarg5, float jarg6, float jarg7, /* imtype */ IntPtr jarg8, out float jarg9, uint jarg10, uint jarg11);

  [DllImport("UnityOde", EntryPoint="CSharp_odeRaycastGeom__SWIG_1")]
  public static extern bool odeRaycastGeom__SWIG_1(float jarg1, float jarg2, float jarg3, float jarg4, float jarg5, float jarg6, float jarg7, /* imtype */ IntPtr jarg8, out float jarg9, uint jarg10);

  [DllImport("UnityOde", EntryPoint="CSharp_odeRaycastGeom__SWIG_2")]
  public static extern bool odeRaycastGeom__SWIG_2(float jarg1, float jarg2, float jarg3, float jarg4, float jarg5, float jarg6, float jarg7, /* imtype */ IntPtr jarg8, out float jarg9);

  [DllImport("UnityOde", EntryPoint="CSharp_odeGetContact")]
  public static extern bool odeGetContact(int jarg1, int jarg2, /* imtype */ IntPtr jarg3, /* imtype */ IntPtr jarg4, /* imtype */ IntPtr jarg5);
}
